--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^2.0.1",
-    "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
     "ai": "^4.3.16",
     "dotenv": "^16.5.0",
     "langchain": "^0.3.27",
     "next": "15.3.3",
-    "openai": "^5.0.1",
+    "openai": "^5.1.1",
     "puppeteer": "^24.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "web-streams-polyfill": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
